core_aggregate/packages/core_aggregate/core_aggregate_parser/lib/src/generated/Protobuf3Parser.dart
// Generated from Protobuf3.g4 by ANTLR 4.13.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'Protobuf3Listener.dart';
import 'Protobuf3BaseListener.dart';
import 'Protobuf3Visitor.dart';
import 'Protobuf3BaseVisitor.dart';
const int RULE_proto = 0, RULE_syntax = 1, RULE_importStatement = 2, RULE_packageStatement = 3, 
          RULE_optionStatement = 4, RULE_optionName = 5, RULE_fieldLabel = 6, 
          RULE_field = 7, RULE_fieldOptions = 8, RULE_fieldOption = 9, RULE_fieldNumber = 10, 
          RULE_oneof = 11, RULE_oneofField = 12, RULE_mapField = 13, RULE_keyType = 14, 
          RULE_type_ = 15, RULE_reserved = 16, RULE_ranges = 17, RULE_range_ = 18, 
          RULE_reservedFieldNames = 19, RULE_topLevelDef = 20, RULE_enumDef = 21, 
          RULE_enumBody = 22, RULE_enumElement = 23, RULE_enumField = 24, 
          RULE_enumValueOptions = 25, RULE_enumValueOption = 26, RULE_messageDef = 27, 
          RULE_messageBody = 28, RULE_messageElement = 29, RULE_extendDef = 30, 
          RULE_serviceDef = 31, RULE_serviceElement = 32, RULE_rpc = 33, 
          RULE_constant = 34, RULE_blockLit = 35, RULE_emptyStatement_ = 36, 
          RULE_ident = 37, RULE_fullIdent = 38, RULE_messageName = 39, RULE_enumName = 40, 
          RULE_fieldName = 41, RULE_oneofName = 42, RULE_mapName = 43, RULE_serviceName = 44, 
          RULE_rpcName = 45, RULE_messageType = 46, RULE_enumType = 47, 
          RULE_intLit = 48, RULE_strLit = 49, RULE_boolLit = 50, RULE_floatLit = 51, 
          RULE_keywords = 52;
class Protobuf3Parser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_SYNTAX = 1, TOKEN_IMPORT = 2, TOKEN_WEAK = 3, TOKEN_PUBLIC = 4, 
                   TOKEN_PACKAGE = 5, TOKEN_OPTION = 6, TOKEN_OPTIONAL = 7, 
                   TOKEN_REPEATED = 8, TOKEN_ONEOF = 9, TOKEN_MAP = 10, 
                   TOKEN_INT32 = 11, TOKEN_INT64 = 12, TOKEN_UINT32 = 13, 
                   TOKEN_UINT64 = 14, TOKEN_SINT32 = 15, TOKEN_SINT64 = 16, 
                   TOKEN_FIXED32 = 17, TOKEN_FIXED64 = 18, TOKEN_SFIXED32 = 19, 
                   TOKEN_SFIXED64 = 20, TOKEN_BOOL = 21, TOKEN_STRING = 22, 
                   TOKEN_DOUBLE = 23, TOKEN_FLOAT = 24, TOKEN_BYTES = 25, 
                   TOKEN_RESERVED = 26, TOKEN_TO = 27, TOKEN_MAX = 28, TOKEN_ENUM = 29, 
                   TOKEN_MESSAGE = 30, TOKEN_SERVICE = 31, TOKEN_EXTEND = 32, 
                   TOKEN_RPC = 33, TOKEN_STREAM = 34, TOKEN_RETURNS = 35, 
                   TOKEN_PROTO3_LIT_SINGLE = 36, TOKEN_PROTO3_LIT_DOBULE = 37, 
                   TOKEN_SEMI = 38, TOKEN_EQ = 39, TOKEN_LP = 40, TOKEN_RP = 41, 
                   TOKEN_LB = 42, TOKEN_RB = 43, TOKEN_LC = 44, TOKEN_RC = 45, 
                   TOKEN_LT = 46, TOKEN_GT = 47, TOKEN_DOT = 48, TOKEN_COMMA = 49, 
                   TOKEN_COLON = 50, TOKEN_PLUS = 51, TOKEN_MINUS = 52, 
                   TOKEN_STR_LIT = 53, TOKEN_BOOL_LIT = 54, TOKEN_FLOAT_LIT = 55, 
                   TOKEN_INT_LIT = 56, TOKEN_IDENTIFIER = 57, TOKEN_WS = 58, 
                   TOKEN_LINE_COMMENT = 59, TOKEN_COMMENT = 60;

  @override
  final List<String> ruleNames = [
    'proto', 'syntax', 'importStatement', 'packageStatement', 'optionStatement', 
    'optionName', 'fieldLabel', 'field', 'fieldOptions', 'fieldOption', 
    'fieldNumber', 'oneof', 'oneofField', 'mapField', 'keyType', 'type_', 
    'reserved', 'ranges', 'range_', 'reservedFieldNames', 'topLevelDef', 
    'enumDef', 'enumBody', 'enumElement', 'enumField', 'enumValueOptions', 
    'enumValueOption', 'messageDef', 'messageBody', 'messageElement', 'extendDef', 
    'serviceDef', 'serviceElement', 'rpc', 'constant', 'blockLit', 'emptyStatement_', 
    'ident', 'fullIdent', 'messageName', 'enumName', 'fieldName', 'oneofName', 
    'mapName', 'serviceName', 'rpcName', 'messageType', 'enumType', 'intLit', 
    'strLit', 'boolLit', 'floatLit', 'keywords'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'syntax'", "'import'", "'weak'", "'public'", "'package'", "'option'", 
      "'optional'", "'repeated'", "'oneof'", "'map'", "'int32'", "'int64'", 
      "'uint32'", "'uint64'", "'sint32'", "'sint64'", "'fixed32'", "'fixed64'", 
      "'sfixed32'", "'sfixed64'", "'bool'", "'string'", "'double'", "'float'", 
      "'bytes'", "'reserved'", "'to'", "'max'", "'enum'", "'message'", "'service'", 
      "'extend'", "'rpc'", "'stream'", "'returns'", "'\"proto3\"'", "''proto3''", 
      "';'", "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", 
      "'.'", "','", "':'", "'+'", "'-'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "SYNTAX", "IMPORT", "WEAK", "PUBLIC", "PACKAGE", "OPTION", "OPTIONAL", 
      "REPEATED", "ONEOF", "MAP", "INT32", "INT64", "UINT32", "UINT64", 
      "SINT32", "SINT64", "FIXED32", "FIXED64", "SFIXED32", "SFIXED64", 
      "BOOL", "STRING", "DOUBLE", "FLOAT", "BYTES", "RESERVED", "TO", "MAX", 
      "ENUM", "MESSAGE", "SERVICE", "EXTEND", "RPC", "STREAM", "RETURNS", 
      "PROTO3_LIT_SINGLE", "PROTO3_LIT_DOBULE", "SEMI", "EQ", "LP", "RP", 
      "LB", "RB", "LC", "RC", "LT", "GT", "DOT", "COMMA", "COLON", "PLUS", 
      "MINUS", "STR_LIT", "BOOL_LIT", "FLOAT_LIT", "INT_LIT", "IDENTIFIER", 
      "WS", "LINE_COMMENT", "COMMENT"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'Protobuf3.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  Protobuf3Parser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  ProtoContext proto() {
    dynamic _localctx = ProtoContext(context, state);
    enterRule(_localctx, 0, RULE_proto);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 106;
      syntax();
      state = 114;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 282930970724) != 0)) {
        state = 112;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_IMPORT:
          state = 107;
          importStatement();
          break;
        case TOKEN_PACKAGE:
          state = 108;
          packageStatement();
          break;
        case TOKEN_OPTION:
          state = 109;
          optionStatement();
          break;
        case TOKEN_ENUM:
        case TOKEN_MESSAGE:
        case TOKEN_SERVICE:
        case TOKEN_EXTEND:
          state = 110;
          topLevelDef();
          break;
        case TOKEN_SEMI:
          state = 111;
          emptyStatement_();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 116;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 117;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  SyntaxContext syntax() {
    dynamic _localctx = SyntaxContext(context, state);
    enterRule(_localctx, 2, RULE_syntax);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 119;
      match(TOKEN_SYNTAX);
      state = 120;
      match(TOKEN_EQ);
      state = 121;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_PROTO3_LIT_SINGLE || _la == TOKEN_PROTO3_LIT_DOBULE)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
      state = 122;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImportStatementContext importStatement() {
    dynamic _localctx = ImportStatementContext(context, state);
    enterRule(_localctx, 4, RULE_importStatement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 124;
      match(TOKEN_IMPORT);
      state = 126;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_WEAK || _la == TOKEN_PUBLIC) {
        state = 125;
        _la = tokenStream.LA(1)!;
        if (!(_la == TOKEN_WEAK || _la == TOKEN_PUBLIC)) {
        errorHandler.recoverInline(this);
        } else {
          if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
          errorHandler.reportMatch(this);
          consume();
        }
      }

      state = 128;
      strLit();
      state = 129;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  PackageStatementContext packageStatement() {
    dynamic _localctx = PackageStatementContext(context, state);
    enterRule(_localctx, 6, RULE_packageStatement);
    try {
      enterOuterAlt(_localctx, 1);
      state = 131;
      match(TOKEN_PACKAGE);
      state = 132;
      fullIdent();
      state = 133;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  OptionStatementContext optionStatement() {
    dynamic _localctx = OptionStatementContext(context, state);
    enterRule(_localctx, 8, RULE_optionStatement);
    try {
      enterOuterAlt(_localctx, 1);
      state = 135;
      match(TOKEN_OPTION);
      state = 136;
      optionName();
      state = 137;
      match(TOKEN_EQ);
      state = 138;
      constant();
      state = 139;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  OptionNameContext optionName() {
    dynamic _localctx = OptionNameContext(context, state);
    enterRule(_localctx, 10, RULE_optionName);
    int _la;
    try {
      state = 149;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_SYNTAX:
      case TOKEN_IMPORT:
      case TOKEN_WEAK:
      case TOKEN_PUBLIC:
      case TOKEN_PACKAGE:
      case TOKEN_OPTION:
      case TOKEN_OPTIONAL:
      case TOKEN_REPEATED:
      case TOKEN_ONEOF:
      case TOKEN_MAP:
      case TOKEN_INT32:
      case TOKEN_INT64:
      case TOKEN_UINT32:
      case TOKEN_UINT64:
      case TOKEN_SINT32:
      case TOKEN_SINT64:
      case TOKEN_FIXED32:
      case TOKEN_FIXED64:
      case TOKEN_SFIXED32:
      case TOKEN_SFIXED64:
      case TOKEN_BOOL:
      case TOKEN_STRING:
      case TOKEN_DOUBLE:
      case TOKEN_FLOAT:
      case TOKEN_BYTES:
      case TOKEN_RESERVED:
      case TOKEN_TO:
      case TOKEN_MAX:
      case TOKEN_ENUM:
      case TOKEN_MESSAGE:
      case TOKEN_SERVICE:
      case TOKEN_EXTEND:
      case TOKEN_RPC:
      case TOKEN_STREAM:
      case TOKEN_RETURNS:
      case TOKEN_BOOL_LIT:
      case TOKEN_IDENTIFIER:
        enterOuterAlt(_localctx, 1);
        state = 141;
        fullIdent();
        break;
      case TOKEN_LP:
        enterOuterAlt(_localctx, 2);
        state = 142;
        match(TOKEN_LP);
        state = 143;
        fullIdent();
        state = 144;
        match(TOKEN_RP);
        state = 147;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_DOT) {
          state = 145;
          match(TOKEN_DOT);
          state = 146;
          fullIdent();
        }

        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldLabelContext fieldLabel() {
    dynamic _localctx = FieldLabelContext(context, state);
    enterRule(_localctx, 12, RULE_fieldLabel);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 151;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_OPTIONAL || _la == TOKEN_REPEATED)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldContext field() {
    dynamic _localctx = FieldContext(context, state);
    enterRule(_localctx, 14, RULE_field);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 154;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 5, context)) {
      case 1:
        state = 153;
        fieldLabel();
        break;
      }
      state = 156;
      type_();
      state = 157;
      fieldName();
      state = 158;
      match(TOKEN_EQ);
      state = 159;
      fieldNumber();
      state = 164;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_LB) {
        state = 160;
        match(TOKEN_LB);
        state = 161;
        fieldOptions();
        state = 162;
        match(TOKEN_RB);
      }

      state = 166;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldOptionsContext fieldOptions() {
    dynamic _localctx = FieldOptionsContext(context, state);
    enterRule(_localctx, 16, RULE_fieldOptions);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 168;
      fieldOption();
      state = 173;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_COMMA) {
        state = 169;
        match(TOKEN_COMMA);
        state = 170;
        fieldOption();
        state = 175;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldOptionContext fieldOption() {
    dynamic _localctx = FieldOptionContext(context, state);
    enterRule(_localctx, 18, RULE_fieldOption);
    try {
      enterOuterAlt(_localctx, 1);
      state = 176;
      optionName();
      state = 177;
      match(TOKEN_EQ);
      state = 178;
      constant();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldNumberContext fieldNumber() {
    dynamic _localctx = FieldNumberContext(context, state);
    enterRule(_localctx, 20, RULE_fieldNumber);
    try {
      enterOuterAlt(_localctx, 1);
      state = 180;
      intLit();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  OneofContext oneof() {
    dynamic _localctx = OneofContext(context, state);
    enterRule(_localctx, 22, RULE_oneof);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 182;
      match(TOKEN_ONEOF);
      state = 183;
      oneofName();
      state = 184;
      match(TOKEN_LC);
      state = 190;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 162411405159432190) != 0)) {
        state = 188;
        errorHandler.sync(this);
        switch (interpreter!.adaptivePredict(tokenStream, 8, context)) {
        case 1:
          state = 185;
          optionStatement();
          break;
        case 2:
          state = 186;
          oneofField();
          break;
        case 3:
          state = 187;
          emptyStatement_();
          break;
        }
        state = 192;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 193;
      match(TOKEN_RC);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  OneofFieldContext oneofField() {
    dynamic _localctx = OneofFieldContext(context, state);
    enterRule(_localctx, 24, RULE_oneofField);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 195;
      type_();
      state = 196;
      fieldName();
      state = 197;
      match(TOKEN_EQ);
      state = 198;
      fieldNumber();
      state = 203;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_LB) {
        state = 199;
        match(TOKEN_LB);
        state = 200;
        fieldOptions();
        state = 201;
        match(TOKEN_RB);
      }

      state = 205;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MapFieldContext mapField() {
    dynamic _localctx = MapFieldContext(context, state);
    enterRule(_localctx, 26, RULE_mapField);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 207;
      match(TOKEN_MAP);
      state = 208;
      match(TOKEN_LT);
      state = 209;
      keyType();
      state = 210;
      match(TOKEN_COMMA);
      state = 211;
      type_();
      state = 212;
      match(TOKEN_GT);
      state = 213;
      mapName();
      state = 214;
      match(TOKEN_EQ);
      state = 215;
      fieldNumber();
      state = 220;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_LB) {
        state = 216;
        match(TOKEN_LB);
        state = 217;
        fieldOptions();
        state = 218;
        match(TOKEN_RB);
      }

      state = 222;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  KeyTypeContext keyType() {
    dynamic _localctx = KeyTypeContext(context, state);
    enterRule(_localctx, 28, RULE_keyType);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 224;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 8386560) != 0))) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
